# neptune

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  deny.toml  flake.nix  rust-toolchain  rust-toolchain.toml
.cargo/: config
.circleci/: config.yml
.config/: nextest.toml
.github/: dependabot.yml  release-pr-template.ejs
.github/workflows/: check-downstream-compiles.yml  licenses-audits.yml  nightly.yml  release-pr.yml  rust.yml  upstream_update.yml
benches/: hash.rs  synthesis.rs
examples/: poseidon_constants_serde.rs
gbench/: .gitignore  Cargo.toml  README.md
gbench/src/: main.rs
paraameters/: round_numbers-1024-4-128-1-1.txt  round_numbers-512-2-128-1-1.txt  round_numbers.txt
parameters/: round_constants-1-1-255-9-8-57-73EDA753299D7D483339D80809A1D80553BDA402FFFE5BFEFFFFFFFF00000001.txt  round_numbers-1280-5-128-1-1.txt  round_numbers-1536-6-128-1-1.txt  round_numbers-16640-65-128-1-1.txt  round_numbers-1792-7-128-1-1.txt  round_numbers-2048-8-128-1-1.txt  round_numbers-2304-9-128-1-1.txt  round_numbers-3072-12-128-1-1.txt  round_numbers-3840-15-128-1-1.txt  round_numbers-4096-16-128-1-1.txt  round_numbers-4352-17-128-1-1.txt  round_numbers-6400-25-128-1-1.txt  round_numbers-768-3-128-1-1.txt  round_numbers-9472-37-128-1-1.txt  round_numbers.txt
script/: get_current_version.sh
spec/: poseidon_spec.md
src/: batch_hasher.rs  bellbar.rs  bench_cs.rs  circuit.rs  circuit2.rs  circuit2_witness.rs  cl.rs  column_tree_builder.rs  constants.rs  encryption.rs  error.rs  field.rs  gpu.rs  halo2_circuit.rs  halo2_poseidon.rs  hash_type.rs  lib.rs  matrix.rs  mds.rs  poseidon-alt.rs  poseidon.rs  poseidon_alt.rs  preprocessing.rs  proof.rs  round_constants.rs  round_numbers.rs  serde_impl.rs  sponge.rs  sponge_api.rs  sponge_circuit.rs  tree_builder.rs  unsafe_serde.rs
src/proteus/: gpu.rs  mod.rs  program.rs  sources.rs
src/proteus/cl/: poseidon.cl  shared.cl
src/sponge/: api.rs  circuit.rs  vanilla.rs
src/test/: mod.rs
src/triton/: cl.rs  gpu.rs  mod.rs
