[package]
name = "neptune"
description = "Poseidon hashing over BLS12-381 for Filecoin."
version = "10.0.0"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lurk-lab/neptune"
resolver = "2"
rust-version = "1.62.1"

[dependencies]
bellperson = { git="https://github.com/lurk-lab/bellperson", branch="dev", default-features = false }
blake2s_simd = "0.5"
blstrs = { git="https://github.com/lurk-lab/blstrs.git", branch="dev", optional = true }
byteorder = "1"
ec-gpu = { git="https://github.com/lurk-lab/ec-gpu", branch="dev", optional = true }
ec-gpu-gen = { git="https://github.com/lurk-lab/ec-gpu", branch="dev", optional = true }
ff = "0.13.0"
generic-array = "0.14.6"
itertools = { version = "0.8.2" }
log = "0.4.17"
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev", features = ["serde"] }
trait-set = "0.3.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.3"
blstrs = { git="https://github.com/lurk-lab/blstrs.git", branch="dev" }
criterion = "0.4.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"
serde_json = "1.0.94"
sha2 = "0.9"

[build-dependencies]
blstrs = { git="https://github.com/lurk-lab/blstrs.git", branch="dev" }
ec-gpu = { git="https://github.com/lurk-lab/ec-gpu", branch="dev", optional = true }
ec-gpu-gen = { git="https://github.com/lurk-lab/ec-gpu", branch="dev", optional = true }
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves", branch="dev", features = ["serde"] }

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "synthesis"
harness = false

[profile.bench]
incremental = false
codegen-units = 1

[features]
default = ["bellperson/default"]
cuda = ["ec-gpu-gen/cuda", "ec-gpu", "pasta_curves/gpu"]
opencl = ["ec-gpu-gen/opencl", "ec-gpu", "pasta_curves/gpu"]
# The supported arities for Poseidon running on the GPU are specified at compile-time.
arity2 = []
arity4 = []
arity8 = []
arity11 = []
arity16 = []
arity24 = []
arity36 = []
# With this feature set, also the strengthened version of the kernel will be compiled.
strengthened = []
# The supported fields for Poseidon running on the GPU are specified at compile-time.
bls = ["blstrs/gpu"]
pasta = ["pasta_curves/gpu"]

[workspace]
members = [
  "gbench",
]
