[package]
name = "gbench"
description = "GPU benchmark program for Neptune"
version = "0.5.4"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
lazy_static = "1.4.0"
bellperson = { version = "0.24.1", default-features = false }
blake2s_simd = "0.5"
byteorder = "1"
env_logger = "0.7.1"
ff = "0.13"
generic-array = "0.14.6"
log = "0.4.17"
neptune = { path = "../", default-features = false, features = ["arity8", "arity11", "bls", "pasta"] }
structopt = { version = "0.3", default-features = false }
blstrs = { version = "0.6.1", features = ["gpu"] }
pasta_curves = { version = "0.5", features = ["serde"] }
ec-gpu = "0.2.0"
ec-gpu-gen = "0.5.2"

[features]
default = ["opencl"]
cuda = ["neptune/cuda", "bellperson/cuda", "ec-gpu-gen/cuda"]
opencl = ["neptune/opencl", "bellperson/opencl", "ec-gpu-gen/opencl"]
