[package]
name = "gbench"
description = "GPU benchmark program for Neptune"
version = "0.5.4"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bellperson = { git="https://github.com/lurk-lab/bellperson", branch="dev", default-features = false }
blake2s_simd = "0.5"
byteorder = "1"
env_logger = "0.7.1"
ff = "0.13.0"
generic-array = "0.14.6"
log = "0.4.17"
neptune = { path = "../", default-features = false, features = ["arity8", "arity11", "bls", "pasta"] }
structopt = { version = "0.3", default-features = false }
blstrs = { git="https://github.com/lurk-lab/blstrs.git", branch="dev", features = ["gpu"] }
pasta_curves = { git="https://github.com/lurk-lab/pasta_curves.git", branch="dev", features = ["gpu"]}
ec-gpu = { git="https://github.com/lurk-lab/ec-gpu", branch="dev" }
ec-gpu-gen = { git="https://github.com/lurk-lab/ec-gpu", branch="dev" }

[features]
default = ["opencl"]
cuda = ["neptune/cuda", "bellperson/cuda", "ec-gpu-gen/cuda"]
opencl = ["neptune/opencl", "bellperson/opencl", "ec-gpu-gen/opencl"]
