[package]
name = "gbench"
description = "GPU benchmark program for Neptune"
version = "0.5.4"
authors = ["porcuquine <porcuquine@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
bellpepper-core = { workspace = true, default-features = false }
blake2s_simd = { workspace = true }
blstrs = { workspace = true, features = ["gpu"] }
byteorder = { workspace = true }
ec-gpu = { workspace = true }
ec-gpu-gen = { workspace = true }
env_logger = "0.11.0"
ff = { workspace = true }
generic-array = { workspace = true }
log = { workspace = true }
neptune = { path = "../", default-features = false, features = ["arity8", "arity11", "bls", "pasta"] }
pasta_curves = { workspace = true, features = ["gpu"] }
structopt = { version = "0.3", default-features = false }

[features]
default = ["opencl"]
cuda = ["neptune/cuda", "ec-gpu-gen/cuda"]
opencl = ["neptune/opencl", "ec-gpu-gen/opencl"]
portable = ["blstrs/portable"]
